# jane_street

./: .gitignore  .pre-commit-config.yaml  dataset-metadata.json  pyproject.toml
configs/: data_config.yaml  feature_graph.yaml  fgraph_config.yaml  master_config.yaml  model_config.yaml  tft_config.yaml  ts_mixer.yaml
data/: categories.json  communities.json  date_data_dist_strict.json  date_symbol_strict.json  feature_scaler.pkl  prev_date_symbols.json  prev_date_symbols_strict.json  responder_groups.json  sym_community.json  symbdf_cat_test.parquet  symbdf_cat_train.parquet  symbdf_cat_val.parquet  symbdf_test.parquet  symbdf_train.parquet  symbdf_val.parquet
data/xgb_models/: xgb_model_val=0.007066.model
jane_street/datamodule/: temporal_data.py  temporal_multi_data.py  tsmixer_datamodule.py
jane_street/datasets/: __init__.py  collate.py  js_dataset.py  js_ts_multidataset.py  js_tsdataset.py  metadata.py
jane_street/layers/: cross_attn.py  dsattention.py  embeddings.py  fan.py  fgraph.py  fourier.py  gated_linear.py  gated_residual.py  gfft.py  linear.py  mha.py  norm.py  revin.py  rnn.py  star.py  tft.py  tide.py  (+6 more)
main_ckpts/: epoch=18-val_score=0.41-temporal-ft-v1.ckpt  epoch=18-val_score=0.41-temporal-ft-v2.ckpt  epoch=18-val_score=0.41-temporal-ft.ckpt  epoch=19-val_score=0.41-temporal-ft-v1.ckpt  epoch=19-val_score=0.41-temporal-ft.ckpt  epoch=20-val_score=0.43-temporal-ft-v1.ckpt  epoch=20-val_score=0.43-temporal-ft-v2.ckpt  epoch=20-val_score=0.43-temporal-ft.ckpt  epoch=21-val_score=0.43-temporal-ft-v1.ckpt  epoch=21-val_score=0.43-temporal-ft.ckpt
(+177 files in other folders)
