[project]
name = "jane-street"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.15"
dependencies = [
    "lightning>=2.4.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "omegaconf>=2.3.0",
    "polars>=1.16.0",
    "pre-commit>=4.0.1",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "zarr>=2.18.3",
]
