[project]
name = "jane-street"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.15"
dependencies = [
    "lightning>=2.4.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "omegaconf>=2.3.0",
    "polars>=1.16.0",
    "pre-commit>=4.0.1",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "wandb>=0.19.1",
    "zarr>=2.18.3",
]

[tool.uv]
link-mode = "copy"
compile-bytecode = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "tensorboard>=2.18.0",
]

[tool.ruff]
extend-exclude = [ 
    "__init__.py",
    "data/*",
    "configs",
    ]